<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/menuHome"
                android:title="@string/menu_home"/>
        <item
            android:id="@+id/menuMap"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/menuAbout"
            android:title="@string/menu_about"/>

        <item
            android:title="user settings">
                <menu>
                        <item
                            android:id="@+id/menuLogin"
                            android:title="@string/menu_login"/>
                        <item
                            android:id="@+id/menuRegister"
                            android:title="@string/menu_register"/>
                        <item
                            android:id="@+id/menuChangePass"
                            android:title="@string/menu_change_password"
                            android:visible="false"/>
                        <item
                            android:id="@+id/menuLogOut"
                            android:title="@string/logOut"
                            android:visible="false" />
                </menu>
        </item>
</menu>