<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/greenOlive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenuEquipment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/back_arrow"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/screen_title"
            android:text="@string/create_route"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:id="@+id/webView"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="38dp" />


</androidx.constraintlayout.widget.ConstraintLayout>