<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/equipmentCardView"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="40dp"
            android:clickable="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/equipmentNews"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hammer" />

                <TextView
                    android:id="@+id/textViewEquipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/HomeEquipment"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favoritesCardView"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_below="@+id/equipmentCardView"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="40dp"
            android:clickable="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageFavorites"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/textViewFavorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/HomeFavorites" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/socialCardView"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:layout_toEndOf="@+id/equipmentCardView"
            app:cardCornerRadius="40dp"
            android:clickable="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageSocial"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_contact_support_24" />

            <TextView
                android:id="@+id/textViewSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/button_Social" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/editorCardView"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_below="@+id/socialCardView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:cardCornerRadius="40dp"
            android:clickable="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageEditorHome"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/add_image" />

            <TextView
                android:id="@+id/textViewEditorHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/create_route" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileCardView"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_below="@+id/favoritesCardView"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:clickable="false"
            app:cardCornerRadius="40dp"
            android:visibility="invisible">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">


            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/button_MyProfile" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>


</FrameLayout>