<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.profile.Profile">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/greenOlive">

        <ImageView
            android:id="@+id/imageMenuProfile"
            android:clickable="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="left"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/screen_title"
            android:textColor="@color/black"
            android:text="PROFILE"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profileToolbar"
        android:orientation="vertical"
        android:background="@color/cardview_dark_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardBackgroundColor="@color/teal_700">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/image_name"
                    android:src="@drawable/ic_baseline_account_circle_24" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14pt"
            android:textAlignment="center">

            <TextView
                android:id="@+id/profileUserName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"/>
            <TextView
                android:id="@+id/profileUserEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profileUserName"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:id="@+id/profileUserId"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profileUserEmail"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/profileUserPhone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profileUserId"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>